fixed some issues that were causing problems with vertical align, width and duplicated icons

--- a/css/font-awesome-ie7.css
+++ b/css/font-awesome-ie7.css
@@ -3,6 +3,7 @@
     font-family: FontAwesome;
     font-style: normal;
     font-weight: normal;
+    background-image: none;
 }
 
 .btn.dropdown-toggle [class^="icon-"], .btn.dropdown-toggle [class*=" icon-"] {
