--- a/less/font-awesome.less
+++ b/less/font-awesome.less
@@ -35,6 +35,12 @@
 
 /*  Font Awesome styles
     ------------------------------------------------------- */
+[class^="icon-"],
+[class*=" icon-"] {
+    background-image: none;
+    vertical-align: middle;
+    width:auto;
+}
 [class^="icon-"]:before,
 [class*=" icon-"]:before {
   font-family: FontAwesome;
@@ -42,6 +48,7 @@
   font-style: normal;
   display: inline-block;
   text-decoration: inherit;
+  vertical-align: top;
 }
 
 a [class^="icon-"],
